// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test basic Components render formik form custom render: custom render formik 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for="field1"
      >
        <span
          class="acenter"
          data-tooltip-id="sampleForm_field1"
        >
          field1label
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="field1"
            type="text"
            value="val1"
          />
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group"
    >
      <div
        class="bp3-form-content"
      >
        <label
          class="bp3-control bp3-checkbox font checkbox main inline inline-undefined"
        >
          <input
            name="field2"
            type="checkbox"
          />
          <span
            class="bp3-control-indicator"
          />
          <span
            class="acenter checkBoxDocTooltipLabel"
            data-tooltip-id="field2tipId"
          >
            field2label
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test basic Components should render Checkbox component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox font checkbox main inline inline-false"
            >
              <input
                name="color"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="acenter checkBoxDocTooltipLabel"
                data-tooltip-id="testform_color"
              >
                Color
              </span>
            </label>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render Custom Input component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="counter-0"
        >
          <label
            class="bp3-label"
            for="counter"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_counter"
            >
              Increment
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button button font main with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Click Me
              </span>
            </button>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render FileInput component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="file-0"
        >
          <label
            class="bp3-label"
            for="file"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_file"
            >
              Attach File
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Select"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Select file...
              </span>
            </label>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render FileInput component 2`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="tags-0"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_tags"
            >
              Add Tag
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper tagInput bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class=""
                >
                  <div
                    class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <span
                        class="bp3-tag bp3-minimal tag addTagButton"
                        data-tag-index="0"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          + tag
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <input
                        class="bp3-input-ghost"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render MultiSelect component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class=""
                >
                  <div
                    class="bp3-input bp3-tag-input bp3-multi-select"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input-ghost"
                        name="color"
                        placeholder="Search..."
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render RadioGroup component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio radio"
              >
                <input
                  name="color"
                  type="radio"
                  value="Red"
                />
                <span
                  class="bp3-control-indicator"
                />
                red
              </label>
              <label
                class="bp3-control bp3-radio radio"
              >
                <input
                  name="color"
                  type="radio"
                  value="Blue"
                />
                <span
                  class="bp3-control-indicator"
                />
                blue
              </label>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render Select component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="color"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down main padding padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render Text component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="name-0"
        >
          <label
            class="bp3-label"
            for="name"
          >
            Name
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render TextArea component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="name-0"
        >
          <label
            class="bp3-label"
            for="name"
          >
            Name
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="name"
            />
          </div>
        </div>
        <button
          class="bp3-button button font main intent intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
